--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             matias 
         </th>
     </table>
-    
+    <button>
+        salir
+    </button>
+    <button>
+        entrar
+    </button>
     <script src="index.js"> </script>
 </body>
 </html>
