Agregando listas al html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    
+    <h1>Este es un archivo de ejmplo para aprender git</h1>
     <a href="#">google</a>
     <a href="#">facebook</a>
     <a href="#">twitter</a>
@@ -26,6 +26,18 @@
     <button>
         entrar
     </button>
+    <ul>
+        <li>
+            lista 1
+        </li>
+    </ul>
+    <ol>
+        <li>
+            lista ordenada
+        </li>
+    </ol>
+
+
     <script src="index.js"> </script>
 </body>
 </html>
